[gd_scene load_steps=4 format=3 uid="uid://cnnbsig7l72j3"]

[ext_resource type="Script" path="res://Fight/FightTile.gd" id="1_fwcak"]
[ext_resource type="Texture2D" uid="uid://rdmd2bukut6u" path="res://WorldTiles/IsoTiles/tile006.png" id="2_5ltt5"]
[ext_resource type="PackedScene" uid="uid://bfggsdyakb6fo" path="res://GUI/SelectedTile.tscn" id="3_xydhg"]

[node name="FightTile" type="Node2D"]
script = ExtResource("1_fwcak")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_5ltt5")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-12, -3, 0, -9, 12, -3, 0, 3)

[node name="SelectedTile" parent="." instance=ExtResource("3_xydhg")]
visible = false

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
